# sandbox

./: .gitignore  README.md  docker-install.md
dbt-airflow/: =2.0  README.md  airflowDockerfile  dbtDockerfile  docker-compose.yml  entrypoint.sh  import_data.py  requirements.txt
dbt-airflow/airflow/dags/: dag.py
dbt-airflow/data/: stars.csv
dbt-airflow/dbt_project/dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt-airflow/dbt_project/dbt/models/: hypergiants.sql  red_stars.sql  sources.yml
docker-PostgreSQL-sandbox/: README.md
pyomo/: README.md  pyomo_mip_example.py  pyomo_wiki_example.py
pyomo/.devcontainer/: Dockerfile  devcontainer.json
research-rag/: README.md  lab.ipynb  pyproject.toml  requirements.txt
research-rag/.devcontainer/: docker-compose.yml
research-rag/corpus/cobordisms/: mapping_tori_cobordisms.tex
research-rag/corpus/manifold_glueing/: memo.fdb_latexmk  memo.fls  memo.tex
research-rag/src/assistant/: __init__.py  config.py
research-rag/src/assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research-rag/src/assistant/agent/: researcher.py  tools.py
research-rag/src/assistant/chat/: ask.py
research-rag/src/assistant/tex_pipeline/: vectorize.py
research-rag/src/assistant/vector_db/: utils.py
rust-python-pyo3/: README.md  build.sh
rust-python-pyo3/.devcontainer/: Dockerfile  devcontainer.json
rust-python-pyo3/python/: main.py  test-rust-project.ipynb
rust-python-pyo3/rust_project/: Cargo.toml
rust-python-pyo3/rust_project/src/: lib.rs
