[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.0.2"
authors = [
  { name="Chase Cain", email="charlescain0607@gmail.com" },
]
description = "A research assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black >= 22.8.0",
]
